reworking template from the ground

--- a/html/includes/navbar-clone.html
+++ b/html/includes/navbar-clone.html
@@ -31,6 +31,10 @@
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
+                    <a class="is-centered-responsive" href="blog.html">Media</a>
+                </div>
+                <!-- Menu item -->
+                <div class="navbar-item is-nav-link">
                     <a class="is-centered-responsive" href="#" target="_blank">
                         <img class="telegram" src="assets/images/logo/telegram.svg" alt="">
                         Telegram
