--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -27,6 +27,7 @@ $dark-text: #4a4a4a;
 $chosen-grey: #e0e0e0;
 $chosen-dark-grey: #66676b;
 $grey-6: #666;
+$grey: #ccc;
 $section-grey: #fcfcfc;
 $light-blue: rgba(94,147,255,.9);
 
