Remove horizontal background repeat

--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -28,7 +28,7 @@ body {
 ========================================================================== */
 
 .dark-wrapper {
-    background: url(../images/bg/gradient-left-darker.png) repeat top left,url(../images/bg/gradient-right-darker.png) repeat top right,#1c004c;
+    background: url(../images/bg/gradient-left-darker.png) repeat-y top left,url(../images/bg/gradient-right-darker.png) repeat-y top right,#1c004c;
 }
 
 .hero, .section {
