--- a/src/sass/sass/grid/columns.sass
+++ b/src/sass/sass/grid/columns.sass
@@ -1,3 +1,4 @@
+@use "sass:math"
 $column-gap: 0.75rem !default
 
 .column
@@ -59,9 +60,9 @@ $column-gap: 0.75rem !default
   @for $i from 0 through 12
     .columns.is-mobile > &.is-#{$i}
       flex: none
-      width: percentage($i / 12)
+      width: percentage(math.div($i, 12))
     .columns.is-mobile > &.is-offset-#{$i}
-      margin-left: percentage($i / 12)
+      margin-left: percentage(math.div($i, 12))
   +mobile
     &.is-narrow-mobile
       flex: none
@@ -116,9 +117,9 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 12
       &.is-#{$i}-mobile
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i}-mobile
-        margin-left: percentage($i / 12)
+        margin-left: percentage(math.div($i, 12))
   +tablet
     &.is-narrow,
     &.is-narrow-tablet
@@ -194,10 +195,10 @@ $column-gap: 0.75rem !default
       &.is-#{$i},
       &.is-#{$i}-tablet
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i},
       &.is-offset-#{$i}-tablet
-        margin-left: percentage($i / 12)
+        margin-left: percentage(math.div($i, 12))
   +touch
     &.is-narrow-touch
       flex: none
@@ -252,9 +253,9 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 12
       &.is-#{$i}-touch
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i}-touch
-        margin-left: percentage($i / 12)
+        margin-left: percentage(math.div($i, 12))
   +desktop
     &.is-narrow-desktop
       flex: none
@@ -309,9 +310,9 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 12
       &.is-#{$i}-desktop
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i}-desktop
-        margin-left: percentage($i / 12)
+        margin-left: percentage(math.div($i, 12))
   +widescreen
     &.is-narrow-widescreen
       flex: none
@@ -366,9 +367,9 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 12
       &.is-#{$i}-widescreen
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i}-widescreen
-        margin-left: percentage($i / 12)
+        margin-left: percentage(math.div($i, 12))
   +fullhd
     &.is-narrow-fullhd
       flex: none
@@ -423,9 +424,9 @@ $column-gap: 0.75rem !default
     @for $i from 0 through 12
       &.is-#{$i}-fullhd
         flex: none
-        width: percentage($i / 12)
+        width: percentage(math.div($i, 12))
       &.is-offset-#{$i}-fullhd
-        margin-left: percentage($i / 12)
+        margin-left: percentage(math.div($i, 12))
 
 .columns
   margin-left: (-$column-gap)
