--- a/src/sass/sass/grid/tiles.sass
+++ b/src/sass/sass/grid/tiles.sass
@@ -1,3 +1,4 @@
+@use "sass:math"
 $tile-spacing: 0.75rem !default
 
 .tile
@@ -31,4 +32,4 @@ $tile-spacing: 0.75rem !default
     @for $i from 1 through 12
       &.is-#{$i}
         flex: none
-        width: ($i / 12) * 100%
+        width: math.div($i, 12) * 100%
