chore: updated js structure, updated bulma and alpine JS

--- a/src/sass/sass/grid/tiles.sass
+++ b/src/sass/sass/grid/tiles.sass
@@ -1,4 +1,5 @@
-@use "sass:math"
+@import "../utilities/mixins"
+
 $tile-spacing: 0.75rem !default
 
 .tile
@@ -32,4 +33,4 @@ $tile-spacing: 0.75rem !default
     @for $i from 1 through 12
       &.is-#{$i}
         flex: none
-        width: math.div($i, 12) * 100%
+        width: (divide($i, 12)) * 100%
