--- a/src/sass/sass/components/level.sass
+++ b/src/sass/sass/components/level.sass
@@ -1,5 +1,6 @@
-@use "sass:math"
-$level-item-spacing: math.div($block-spacing, 2) !default
+@import "../utilities/mixins"
+
+$level-item-spacing: ($block-spacing * 0.5) !default
 
 .level
   @extend %block
