feat: updated dependencies, load bulma from node modules

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,7 +19,7 @@ TABLE OF CONTENTS
 @import 'abstracts/colors';
 @import 'abstracts/animations';
 
-@import "../sass/bulma";
+@import "../../node_modules/bulma/bulma.sass";
 
 @import 'components/buttons';
 @import 'components/forms';
