--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -71,7 +71,7 @@ body {
     }
 
     //Js particles
-    #particles-js {
+    #tsparticles {
         position: absolute;
         top: 0;
         left: 0;
