feat: upgrade to Astro v2

--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -22,7 +22,7 @@ const {title} = Astro.props
     })(window,document,'script','dataLayer','GTM-PV65Z24');</script>
     <!-- End Google Tag Manager -->
 
-    <link rel="icon" type="image/png" href="img/favicon.png" />
+    <link rel="icon" type="image/png" href="/img/favicon.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
