--- a/src/layouts/Minimal.astro
+++ b/src/layouts/Minimal.astro
@@ -14,7 +14,7 @@ const {title} = Astro.props
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Krypton {'- ' + title}</title>
 
-    <link rel="icon" type="image/png" href="img/favicon.png" />
+    <link rel="icon" type="image/png" href="/img/favicon.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
