feat: upgrade dependencies + add unplugin-fonts

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@
   <div class="container">
     <!-- Brand -->
     <div class="navbar-brand">
-      <a href="index" class="navbar-item">
+      <a href="/" class="navbar-item">
         <img class="rotating" src="/img/logo/krypton.svg" alt="" />
         <span class="brand-name">Krypton</span>
       </a>
