--- a/src/components/NavbarClone.astro
+++ b/src/components/NavbarClone.astro
@@ -12,7 +12,7 @@
   <div class="container">
     <!-- Brand -->
     <div class="navbar-brand">
-      <a href="index" class="navbar-item">
+      <a href="/" class="navbar-item">
         <img class="rotating" src="/img/logo/krypton-gradient.svg" alt="" />
         <span class="brand-name">Krypton</span>
       </a>
