chore: update dependencies

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -28,7 +28,7 @@ body {
 ========================================================================== */
 
 .dark-wrapper {
-    background: url(../img/bg/gradient-left-darker.png) repeat-y top left, url(../img/bg/gradient-right-darker.png) repeat-y top right, #1c004c;
+    background: url(/img/bg/gradient-left-darker.png) repeat-y top left, url(/img/bg/gradient-right-darker.png) repeat-y top right, #1c004c;
 }
 
 .hero, .section {
@@ -312,12 +312,12 @@ body {
 
 //Radial gradient background
 .has-big-gradient {
-    background: url(../img/bg/gradient-left.png) no-repeat top left, url(../img/bg/gradient-right.png) no-repeat top right, #320184;
+    background: url(/img/bg/gradient-left.png) no-repeat top left, url(/img/bg/gradient-right.png) no-repeat top right, #320184;
 }
 
 //Dark radial gradient background
 .has-big-dark-gradient {
-    background: url(../img/bg/gradient-left-darker.png) no-repeat top left, url(../img/bg/gradient-right-darker.png) no-repeat top right, #1c004c;
+    background: url(/img/bg/gradient-left-darker.png) no-repeat top left, url(/img/bg/gradient-right-darker.png) no-repeat top right, #1c004c;
 }
 
 //CTA Spacing
@@ -465,7 +465,7 @@ body {
 ========================================================================== */
 
 .token-wrapper {
-    background: url(../img/bg/bg-token-top.png) no-repeat top center, url(../img/bg/bg-token-left.png) no-repeat top left, url(../img/bg/bg-token-bottom.png) no-repeat bottom right, #1c004c;
+    background: url(/img/bg/bg-token-top.png) no-repeat top center, url(/img/bg/bg-token-left.png) no-repeat top left, url(/img/bg/bg-token-bottom.png) no-repeat bottom right, #1c004c;
 }
 
 .token-wrapper {
@@ -692,7 +692,7 @@ body {
 ========================================================================== */
 
 .roadmap-wrapper {
-    background: url(../img/bg/bg-token-top.png) no-repeat top center, url(../img/bg/bg-token-left.png) no-repeat top left, url(../img/bg/bg-token-bottom.png) no-repeat bottom right, #1c004c;
+    background: url(/img/bg/bg-token-top.png) no-repeat top center, url(/img/bg/bg-token-left.png) no-repeat top left, url(/img/bg/bg-token-bottom.png) no-repeat bottom right, #1c004c;
 }
 
 .roadmap-wrapper {
@@ -963,7 +963,7 @@ body {
 ========================================================================== */
 
 .media-wrapper {
-    background: url(../img/bg/gradient-left-darker.png) no-repeat top left, url(../img/bg/gradient-right-darker.png) no-repeat top right, #1c004c;
+    background: url(/img/bg/gradient-left-darker.png) no-repeat top left, url(/img/bg/gradient-right-darker.png) no-repeat top right, #1c004c;
 }
 
 .media-wrapper {
