--- a/src/styles/utilities/_utils.scss
+++ b/src/styles/utilities/_utils.scss
@@ -19,7 +19,7 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
-    background-image: url(../img/loaders/rings.svg);
+    background-image: url(/img/loaders/rings.svg);
     background-size: 80px 80px;
     background-repeat: no-repeat;
     background-position: center;
