--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
 import Unfont from 'unplugin-fonts/astro/component.astro';
 import Footer from '../components/Footer.astro'
 import BackToTop from '../components/BackToTop.astro'
@@ -15,6 +16,7 @@ const {title} = Astro.props
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Krypton {'- ' + title}</title>
+    <ViewTransitions />
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
